# chatllm

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml  test_basic.py
examples/: history_snapshots.py  minimal.py  minimal_mock.py
src/chatllm/: __init__.py  chat.py
src/chatllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_ask_stub.py  test_book.py  test_history.py
